--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@ body {
 }
 #character {
     position: absolute;
+    background-image: url("/images/monkey_standing_1.png");
     width: 20px;
     height: 40px;
     background-color: red;
