--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@ body {
 }
 
 .playground {
+    position: relative;
     background-image: url("/images/main_menu_gamename.png");
     background-size: cover;
     width: 1024px;
@@ -72,8 +73,8 @@ h3{
 #thePlayer{
     position: absolute;
     background-image: url("/images/leprechaun.png");
-    width: 20px;
-    height: 40px;
+    width: 30px;
+    height: 60px;
 
 
 /* 
