--- a/index.css
+++ b/index.css
@@ -84,3 +84,11 @@ h3{
     background-image: url("images/monkey_standing_1.png");
     background-repeat: no-repeat; */
 }
+
+#theThief {
+    position: 50%;
+    width: 50px;
+    height: 70px;
+    background-image: url("/images/villain.png");
+/*    background-image: url("/images/villain_attack.png");*/
+}
