--- a/index.css
+++ b/index.css
@@ -92,3 +92,10 @@ h3{
     background-image: url("/images/villain.png");
 /*    background-image: url("/images/villain_attack.png");*/
 }
+
+#floors {
+    position: absolute;
+    background-color: blue;
+    width: 1024px;
+    height: 20px;
+}
