--- a/index.css
+++ b/index.css
@@ -55,7 +55,7 @@ body {
     background-color: aqua;
 }
 
-h3{
+h3 {
     position: absolute;
     left: 50%;
     bottom: 0;
@@ -63,21 +63,21 @@ h3{
     margin-right: auto;
 }
 
-#levelTarget{
+#levelTarget {
     width: auto;
     height: 100px;
     background-image: url("images/leprecoin.png");
     background-repeat: no-repeat;
 }
 
-#thePlayer{
+#thePlayer {
     position: absolute;
     background-image: url("/images/leprechaun.png");
     width: 30px;
     height: 60px;
 
 
-/* 
+    /* 
     width: 500;
     height: 500px;
 
@@ -90,12 +90,12 @@ h3{
     width: 50px;
     height: 70px;
     background-image: url("/images/villain.png");
-/*    background-image: url("/images/villain_attack.png");*/
+    /*    background-image: url("/images/villain_attack.png");*/
 }
 
-#floors {
+#floors div {
+    background-color: cyan;
     position: absolute;
-    background-color: blue;
-    width: 1080px;
+    border-radius: 5px;
     height: 20px;
 }
