--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ body {
 
 #playground {
     position: relative;
-    background-image: url("/images/main_menu_gamename.png");
+    background-image: url("/images/levels/main_menu_gamename.png");
     background-size: cover;
     min-width: 1280px;
     min-height: 720px;
@@ -57,7 +57,7 @@ body {
     font-style:italic;
     font-size: large;
     background-color: red;
-    background-image: url("images/villain.gif");
+    background-image: url("images/characters/villains/villain.gif");
     background-size: cover;
 }
 
@@ -68,7 +68,7 @@ body {
     font-weight: 900;
     font-style:italic;
     font-size: large;
-    background-image: url("images/leprechaun_walking_RIGHT.gif");
+    background-image: url("images/characters/main/leprechaun_walking_RIGHT.gif");
     background-size: cover;
     width: auto;
     height: 50px;
@@ -87,13 +87,13 @@ h3 {
 #levelTarget {
     width: auto;
     height: 100px;
-    background-image: url("images/leprecoin.png");
+    background-image: url("images/other/leprecoin.png");
     background-repeat: no-repeat;
 }
 
 #thePlayer {
     position: absolute;
-    background-image: url("/images/leprechaun.png");
+    background-image: url("/images/characters/main/leprechaun.gif");
     width: 30px;
     height: 60px;
 
@@ -110,7 +110,7 @@ h3 {
     position: 50%;
     width: 50px;
     height: 70px;
-    background-image: url("/images/villain.gif");
+    background-image: url("/images/characters/villains/villain.gif");
     /*    background-image: url("/images/villain_attack.png");*/
 }
 
@@ -120,7 +120,7 @@ h3 {
     width: 40;
     height: 25;
     left:35%;
-    background-image: url("/images/black_dog.gif");
+    background-image: url("/images/characters/villains/black_dog.gif");
     /*    background-image: url("/images/villain_attack.png");*/
 }
 
