--- a/style.css
+++ b/style.css
@@ -70,25 +70,20 @@ body {
     width: 40px;
     height: 60px;
 }
-#theBadGuy {
+#enemies {
     position: absolute;
-    top: 80px;
-    left: 80px;
     background-image: url("images/characters/villains/villain.gif");
     background-size: cover;
-    width: 50px;
-    height: 80px;
 }
 
-#theAttackers{
-    transform: scaleX(-1);
+#theAttacker{
     position: absolute;
-    top: 120px;
-    left: 180px;
+    right: 0;
+    bottom: 0;
     background-image: url("images/characters/villains/black_dog.gif");
     background-size: cover;
-    width: 64;
-    height: 40;
+    width: 20;
+    height: 20;
 }
 
 #lives{
