--- a/style.css
+++ b/style.css
@@ -11,6 +11,16 @@ body {
     margin-top: 10vh;
 }
 
+#welcome-screen{
+    width: 1280px;
+    height: 720px;
+    top: 0;
+}
+
+#EST, #ENG{
+    position: absolute;
+}
+
 .tile-row {}
 
 #start-menu {
@@ -21,6 +31,23 @@ body {
     top: 0;
     background-color: rgba(0, 0, 0, 0.61);
     backdrop-filter: blur(5px);
+}
+
+#paused-menu, #death-screen {
+    position: absolute;
+}
+
+#paused-menu:not([hidden]), #death-screen:not([hidden]) {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    backdrop-filter: blur(2px);
+    z-index: 999;
 }
 
 #startButton {
@@ -49,6 +76,34 @@ body {
     height: 50px;
     border-radius: 5px;
     background-color: green;
+}
+
+#continueButton {
+
+    border-radius: 5px;
+    width: auto;
+    height: 50px;
+    color: white;
+    font-weight: 900;
+    font-style: italic;
+    font-size: large;
+    background-color: red;
+    background-image: url("images/characters/villains/villain.gif");
+    background-size: cover;
+}
+
+#restartButton {
+
+    border-radius: 5px;
+    width: auto;
+    height: 50px;
+    color: white;
+    font-weight: 900;
+    font-style: italic;
+    font-size: large;
+    background-color: red;
+    background-image: url("images/characters/villains/villain.gif");
+    background-size: cover;
 }
 
 #leprecoin {
@@ -95,6 +150,7 @@ body {
     width: 40;
     height: 25;
 }
+
 #largeAttacker {
     position: absolute;
     right: 0;
