--- a/style.css
+++ b/style.css
@@ -131,6 +131,12 @@ body {
     left: 0;
     position: absolute;
 }
+#projectile {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: red;
+}
 
 #flyingSaucer {
     position: absolute;
