--- a/style.css
+++ b/style.css
@@ -11,13 +11,14 @@ body {
     margin-top: 10vh;
 }
 
-#welcome-screen{
+#welcome-screen {
     width: 1280px;
     height: 720px;
     top: 0;
 }
 
-#EST, #ENG{
+#EST,
+#ENG {
     position: absolute;
 }
 
@@ -33,11 +34,13 @@ body {
     backdrop-filter: blur(5px);
 }
 
-#paused-menu, #death-screen {
+#paused-menu,
+#death-screen {
     position: absolute;
 }
 
-#paused-menu:not([hidden]), #death-screen:not([hidden]) {
+#paused-menu:not([hidden]),
+#death-screen:not([hidden]) {
     top: 0;
     left: 0;
     width: 100%;
@@ -92,7 +95,8 @@ body {
     background-size: cover;
 }
 
-#restartButtonPause,#restartButtonDeath {
+#restartButtonPause,
+#restartButtonDeath {
 
     border-radius: 5px;
     width: auto;
@@ -131,6 +135,7 @@ body {
     left: 0;
     position: absolute;
 }
+
 #projectile {
     position: absolute;
     width: 10px;
@@ -141,10 +146,11 @@ body {
 
 #userProjectile {
     position: absolute;
+    background-image: url("images/characters/main/bullet.png");
     width: 10px;
     height: 10px;
     border-radius: 360px;
-    background-color: rgb(5, 255, 5);
+    /*    background-color: rgb(5, 255, 5);*/
 }
 
 #flyingSaucer {
@@ -182,11 +188,57 @@ body {
     bottom: 60;
 }
 
+#bossHealthBar {
+    position: absolute;
+    text-align: center;
+    width: 1280;
+    top: 10;
+    color: aqua;
+}
+
+#health-bar {
+    margin: auto;
+    width: 300px;
+    height: 20px;
+    border: 2px solid #000;
+    background-color: red;
+}
+
+#health-level {
+    margin: left;
+    width: 100%;
+    height: 100%;
+    background-color: green;
+}
+
+#ammo {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    background-image: url("images/characters/villains/brown_dog.gif");
+    background-size: cover;
+    width: 20;
+    height: 20;
+}
+
+#gun {
+    position: absolute;
+    right: 80;
+    bottom: 0;
+    color: yellow;
+    background-image: url("images/hud/gun.png");
+    width: 40;
+    height: 40;
+}
 
 #lives {
     position: absolute;
     right: 10;
     bottom: 10;
+}
+
+#elements {
+    position: absolute;
 }
 
 #score,
