--- a/style.css
+++ b/style.css
@@ -141,7 +141,8 @@ body {
     width: 10px;
     height: 10px;
     border-radius: 360px;
-    background-color: red;
+    background-color: rgba(255, 0, 0, 0.25) ; 
+    background-image: url("images/characters/villains/fireball.gif");
 }
 
 #userProjectile {
@@ -159,7 +160,7 @@ body {
     left: 40;
     width: 100;
     height: 60;
-    background-image: url("images/characters/villains/ufo.gif");
+    /* background-image: url("images/characters/villains/ufo.gif"); */
 }
 
 #tinyAttacker {
