--- a/game/templates/style.css
+++ b/game/templates/style.css
@@ -1,6 +1,10 @@
 body {
     background-color: black;
     overflow: hidden;
+    
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
 
 .inner {
@@ -11,75 +15,119 @@ body {
     margin-top: 10vh;
 }
 
-.navbar{
+/* .navbar {
     user-select: none;
-	cursor: pointer;
-}
+     cursor: pointer; 
+} */
 
 .row__cell {
-	padding: 8px 20px;
+    padding: 8px 20px;
 }
-.row__cell + .row__cell {
-	border-left: 1px solid #c1c4c7;
+
+.row__cell+.row__cell {
+    border-left: 1px solid #c1c4c7;
 }
-.row + .row {
-	border-top: 1px solid #c1c4c7;
+
+.row+.row {
+    border-top: 1px solid #c1c4c7;
 }
+
 .row:nth-child(even) .row__cell {
-	background-color: #f2f2f2;
+    background-color: #f2f2f2;
 }
 
 .row:nth-child(odd) .row__cell {
-	background-color: #ffffff;
+    background-color: #ffffff;
 }
 
 .row__cell:hover {
-	background-color: #c1c4c7 !important;
+    /* background-color: #c1c4c7 !important; */
 }
 
 
 .scoreboard {
     padding-left: 25px;
     left: 0px;
-    color:yellow;
+    color: yellow;
     width: 500px;
     height: 500px;
     border-radius: 5px;
-    position:absolute;
+    position: absolute;
     top: 0;
-    background-color: rgba(0, 0, 0, 0.61);
-}
-.scoreboard h1{
-   text-align: center;
-}
-.scoreboard table{
-    width:  100%;
-    border-collapse: collapse;
-	border-style: hidden;
-    letter-spacing: 1px;
-    font-size: 1.2rem;
-	border: #c1c4c7 1px solid;
+    /* background-color: rgba(0, 0, 0, 0.61); */
 }
 
-.scoreboard tr{
+.scoreboard h1 {
+    text-align: center;
+}
+
+.scoreboard table {
+    width: 100%;
+    border-collapse: collapse;
+    border-style: hidden;
+    letter-spacing: 1px;
+    font-size: 1.2rem;
+    border: #c1c4c7 1px solid;
+    background-color: rgba(0, 0, 0, 0.61);
+}
+
+.scoreboard tr {
     text-align: center;
     padding: 5px;
     color: red;
 }
 
 
-.prev, .next {
-
+.prev {
+    scale: 1.4;
+    position: absolute;
+    top: 250px;
     border-radius: 50px;
     color: white;
     background-color: darkblue;
-    position:relative;
-    left: 75%;
+    left: 40%;
 }
 
-#EST,
-#ENG {
+.next {
+    scale: 1.4;
     position: absolute;
+    top: 250px;
+    border-radius: 50px;
+    color: white;
+    background-color: darkblue;
+    left: 60%;
+}
+.next:hover, .prev:hover{
+    background-color: red;
+    color: black;
+}
+
+#storybox {
+    position: absolute;
+    border-radius: 5px;
+    bottom: 5px;
+    width: 500px;
+    height: 80px;
+    left: 500px;
+    backdrop-filter: blur(5px);
+    padding: 10;
+    background-color: rgba(0, 0, 0, 0.61);
+}
+
+#storybox #sbTitle{
+    color:white
+}
+
+#storybox #sbText, #sbText2{
+    background-color: rgba(0,0,0,0);
+    color: yellow;
+}
+#storybox #sbContinue{
+    position: absolute;
+    bottom:  1;
+    right: 40;
+    background-color: rgba(0,0,0,0);
+    color: yellow;
 }
 
 .tile-row {}
@@ -156,10 +204,10 @@ body {
 }
 
 #restartButtonPause,
-#restartButtonDeath {
+#restartButtonDeath, #backToMenuDeath, #backToMenuPause {
 
     border-radius: 5px;
-    width: auto;
+    width: auto + 5px;
     height: 50px;
     color: white;
     font-weight: 900;
@@ -201,7 +249,7 @@ body {
     width: 10px;
     height: 10px;
     border-radius: 360px;
-    background-color: rgba(255, 0, 0, 0.25) ; 
+    background-color: rgba(255, 0, 0, 0.25);
     background-image: url("/game/images/characters/villains/fireball.gif");
 }
 
@@ -323,8 +371,7 @@ body {
 }
 
 #toggleMute,
-#togglePause,
-#backToMenu {
+#togglePause {
     position: absolute;
     right: 0;
 }
@@ -340,10 +387,10 @@ body {
     border-radius: 100%;
 }
 
-#backToMenu {
+/* #backToMenu {
     top: 80;
     border-radius: 100%;
-}
+} */
 
 #playground {
     background-size: cover;
