--- a/game/templates/index.html
+++ b/game/templates/index.html
@@ -53,7 +53,7 @@
                     <button id="continueButton">CONTINUE (p)</button>
                     <button id="restartButtonPause">RESTART</button>
                     <button id="musicButton">MUSIC ON</button>
-                    <button id="fullscreenButton">FULLSCREEN OFF</button>
+                    <!-- <button id="fullscreenButton">FULLSCREEN OFF</button> -->
                     <button id="backToMenuPause">EXIT</button>
                 </div>
 
