--- a/game/templates/index.html
+++ b/game/templates/index.html
@@ -17,7 +17,20 @@
 
 
             <div class="menu" id="start-menu">
-
+                <div id="creditsInfo">
+                    <div id="aboutGame1">
+                        <pre>"↑" | "w"</pre>
+                        <pre>"←" | "a"</pre>
+                        <pre>"→" | "d"</pre>
+                        <pre>"Space"</pre>
+                    </div>
+                    <div id="aboutGame2">
+                    <pre>- JUMP</pre>
+                    <pre>- LEFT</pre>
+                    <pre>- RIGHT</pre>
+                    <pre>- SHOOT</pre>
+                    </div>
+                </div>
                 <div class="scoreboard" id="welcome-screen">
                     <h1>HIGHSCORES</h1>
                     <table>
@@ -53,22 +66,16 @@
                     <button id="continueButton">CONTINUE (p)</button>
                     <button id="restartButtonPause">RESTART</button>
                     <button id="musicButton">MUSIC ON</button>
-                    <!-- <button id="fullscreenButton">FULLSCREEN OFF</button> -->
-                    <button id="backToMenuPause">EXIT</button>
+                    <button id="backToMenuPause">EXIT</button> 
                 </div>
+
+           
 
                 <div id="gameInfo">
                     <div id="timer">00:00</div>
                     <div id="score">SCORE: 0</div>
-                    <!-- <div><img id="toggleMute" src="/game/images/hud/music_off.png"></div>
-                    <div><img id="togglePause" src="/game/images/hud/pause.png" hidden></div> -->
                 </div>
-                <!-- <div class="paused" id="paused-menu" hidden>
-                    <button id="continueButton">CONTINUE (p)</button>
-                    <button id="restartButtonPause">RESTART</button>
-                    <button id="backToMenuPause">EXIT</button>
-                </div> -->
-
+              
                 <div class="died" id="death-screen">
                     <h1 id="deathMessage" style="color: yellow;">YOU DIED, WHAT A NOOB!</h1>
                     <h2 style="color:burlywood" id="currentLevel">Level reached: </h2>
