--- a/game/templates/index.html
+++ b/game/templates/index.html
@@ -64,7 +64,7 @@
 
                 <div id="settingMenu" hidden>
                     <button id="continueButton">CONTINUE (p)</button>
-                    <button id="restartButtonPause">RESTART</button>
+                    <button id="restartButtonPause">RESTART (r)</button>
                     <button id="musicButton">MUSIC ON</button>
                     <button id="backToMenuPause">EXIT</button> 
                 </div>
