--- a/game/templates/index.html
+++ b/game/templates/index.html
@@ -31,7 +31,7 @@
                     <pre>- SHOOT</pre>
                     </div>
                 </div>
-                <!-- <div class="scoreboard" id="welcome-screen">
+                <div class="scoreboard" id="welcome-screen">
                     <h1>HIGHSCORES</h1>
                     <table>
                         <tr class="navbar" style="color:salmon">
@@ -48,7 +48,7 @@
                     <br>
                     <button class="prev" id="prev">Previous</button>
                     <button class="next" id="next">Next</button> 
-                </div> -->
+                </div>
 
                 <button id="startButton1">CASUAL PLAY</button>
                 <button id="startButton2">STORY MODE</button>
