--- a/game/templates/index.html
+++ b/game/templates/index.html
@@ -40,9 +40,7 @@
                             <th class="row__cell">Score</th>
                             <th class="row__cell">Time</th>
                         </tr>
-                        <div id="board">
-
-                        </div>
+                        <tbody id="board"></tbody>
                     </table>
 
                     <br>
