--- a/style.css
+++ b/style.css
@@ -72,6 +72,40 @@ body {
     background-color: #ffffff;
 }
 
+#board{
+    background-color: rgba(0, 0, 0, 0.386);
+    color: red;
+}
+
+#board td,
+#board .row__cell {
+    background-color: transparent !important;
+}
+#board tr {
+    background-color: transparent !important;
+}
+#welcome-screen #board .row__cell,
+#welcome-screen #board .row:nth-child(even) .row__cell,
+#welcome-screen #board .row:nth-child(odd) .row__cell {
+    background-color: transparent !important;
+}
+
+#resetHighscores {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 8px 12px;
+    border-radius: 6px;
+    border: 1px solid #c1c4c7;
+    background: rgba(0, 0, 0, 0.5);
+    color: #ffd700;
+    cursor: pointer;
+}
+#resetHighscores:hover {
+    background: rgba(255, 0, 0, 0.2);
+    border-color: red;
+}
+
 .scoreboard {
     padding-left: 25px;
     left: 0px;
@@ -130,39 +164,6 @@ body {
     color: black;
 }
 
-#storybox {
-    position: absolute;
-    border-radius: 5px;
-    bottom: 5px;
-    width: 500px;
-    height: 80px;
-    left: 500px;
-    backdrop-filter: blur(5px);
-    padding: 10;
-    background-color: rgba(0, 0, 0, 0.61);
-}
-
-#storybox #sbTitle {
-    color: white
-}
-
-#storybox #sbText,
-#sbText2 {
-    background-color: rgba(0, 0, 0, 0);
-    color: yellow;
-}
-
-#storybox #sbContinue {
-    position: absolute;
-    bottom: 1;
-    right: 40;
-    background-color: rgba(0, 0, 0, 0);
-    color: yellow;
-}
-
-#tileMap {}
-
-
 #start-menu {
 
     background-image: url("/game/images/main_menu_gamename.png");
@@ -193,6 +194,11 @@ body {
     justify-content: center;
     backdrop-filter: blur(2px);
     z-index: 999;
+}
+
+#death-screen h1,
+#death-screen h2 {
+    text-align: center;
 }
 
 #startButton1 {
@@ -397,7 +403,8 @@ body {
 
 #score,
 #fps,
-#timer {
+#timer,
+#bonus {
     top: 0;
     position: absolute;
     color: white;
@@ -413,6 +420,11 @@ body {
 
 #timer {
     left: 100;
+}
+
+#bonus {
+    left: 320;
+    color: #ffd700;
 }
 
 #toggleMute,
@@ -431,11 +443,6 @@ body {
     top: 40;
     border-radius: 100%;
 }
-
-/* #backToMenu {
-    top: 80;
-    border-radius: 100%;
-} */
 
 #playground {
     background-size: cover;
